# Sessio4-Server-App

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
dependencies/crow/lib/: boost_chrono-vc140-mt.lib  boost_container-vc140-mt.lib  boost_context-vc140-mt.lib  boost_coroutine-vc140-mt.lib  boost_date_time-vc140-mt.lib  boost_exception-vc140-mt.lib  boost_regex-vc140-mt.lib  boost_system-vc140-mt.lib
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Controller.cpp  Controller.h  main.cpp
src/Server/: WebSocketServer.cpp  WebSocketServer.h
src/Ui/: AppLog.cpp  AppLog.h  UserInterface.cpp  UserInterface.h
window_layout/: imgui.ini
